--- a/windows-api-list.html
+++ b/windows-api-list.html
@@ -33,3 +33,11 @@
 			<meta name="toc_rel" content="toc.json" />
 			<meta name="word_count" content="1099" />
 			<meta name="scope" content="Windows, Desktop" />
+			<link href="https://docs.microsoft.com/en-us/windows/win32/apiindex/windows-api-list" rel="canonical">
+			<title>
+				#TEXT: Windows API Index - Windows applications | Microsoft Docs
+			<link rel="stylesheet" href="/_themes/docs.theme/master/en-us/_themes/styles/f59acded.site-ltr.css ">
+			<link rel="stylesheet" href="/_themes/docs.theme/master/en-us/_themes/styles/cd54db8b.conceptual.css ">
+			<script></script>
+			<script></script>
+			<script></script>
